# mrm-chat-2

./: .env.example  .gitignore  AI_CHAT_SETUP.md  API_EXAMPLES.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  SWAGGER_DOCUMENTATION.md  WEBSOCKET_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  websocket_test.html
ai_chat/: README.md  TEST_SUMMARY.md  admin.py  ai_websocket_test.html  consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
ai_chat/migrations/: 0001_initial.py
app/: config.py
app/api/v1/: messages.py  router.py
app/models/: message.py
chat/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py  websocket_docs.py
chat/management/commands/: test_chat.py
chat/migrations/: 0001_initial.py  0002_alter_chat_name_alter_chat_participants_and_more.py
myproject/: asgi.py  settings.py  urls.py
